适配尺寸单位转换

--- a/app/src/main/res/layout/view_type_popup.xml
+++ b/app/src/main/res/layout/view_type_popup.xml
@@ -15,6 +15,7 @@
             android:id="@+id/tv_android"
             android:textColor="?attr/colorPrimary"
             android:text="Android"
+            android:gravity="center_vertical"
             android:paddingLeft="@dimen/large_margin"
             android:paddingBottom="@dimen/normal_margin"
             android:layout_width="400px"
@@ -24,6 +25,7 @@
             android:id="@+id/tv_ios"
             android:textColor="?attr/colorPrimary"
             android:text="IOS"
+            android:gravity="center_vertical"
             android:paddingBottom="@dimen/normal_margin"
             android:paddingLeft="@dimen/large_margin"
             android:layout_width="400px"
@@ -33,6 +35,7 @@
             android:id="@+id/tv_js"
             android:textColor="?attr/colorPrimary"
             android:text="前端"
+            android:gravity="center_vertical"
             android:paddingBottom="@dimen/normal_margin"
             android:paddingLeft="@dimen/large_margin"
             android:layout_width="400px"
@@ -42,6 +45,7 @@
             android:id="@+id/tv_vedio"
             android:textColor="?attr/colorPrimary"
             android:text="休息视频"
+            android:gravity="center_vertical"
             android:paddingBottom="@dimen/normal_margin"
             android:paddingLeft="@dimen/large_margin"
             android:layout_width="400px"
@@ -51,6 +55,7 @@
             android:id="@+id/tv_app"
             android:textColor="?attr/colorPrimary"
             android:text="App"
+            android:gravity="center_vertical"
             android:paddingBottom="@dimen/normal_margin"
             android:paddingLeft="@dimen/large_margin"
             android:layout_width="400px"
@@ -60,6 +65,7 @@
             android:id="@+id/tv_recom"
             android:textColor="?attr/colorPrimary"
             android:text="瞎推荐"
+            android:gravity="center_vertical"
             android:paddingBottom="@dimen/normal_margin"
             android:paddingLeft="@dimen/large_margin"
             android:layout_width="400px"
@@ -69,6 +75,7 @@
             android:id="@+id/tv_data"
             android:textColor="?attr/colorPrimary"
             android:text="拓展资源"
+            android:gravity="center_vertical"
             android:paddingBottom="@dimen/normal_margin"
             android:paddingLeft="@dimen/large_margin"
             android:layout_width="400px"
