--- a/app/src/main/res/layout/item_welfare.xml
+++ b/app/src/main/res/layout/item_welfare.xml
@@ -7,20 +7,21 @@
         android:id="@+id/item_iv_welfare"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxHeight="720px"
         style="@style/repple_out_backguound"
         android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/item_tv_time"
         android:layout_width="match_parent"
-        android:textSize="@dimen/normal_margin"
+        android:textSize="@dimen/normal_size"
         android:layout_marginTop="@dimen/small_margin"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/item_tv_user"
         android:layout_width="match_parent"
-        android:textSize="@dimen/normal_size"
+        android:textSize="@dimen/small_size"
         android:textColor="?attr/colorPrimary"
         android:layout_marginBottom="@dimen/normal_margin"
         android:gravity="right"
