--- a/app/src/main/res/layout/item_welfare.xml
+++ b/app/src/main/res/layout/item_welfare.xml
@@ -1,31 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/item_iv_welfare"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    fresco:cardCornerRadius="10px"
+    fresco:cardElevation="8px"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxHeight="720px"
-        style="@style/repple_out_backguound"
-        android:scaleType="centerCrop"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/item_tv_time"
-        android:layout_width="match_parent"
-        android:textSize="@dimen/normal_size"
-        android:layout_marginTop="@dimen/small_margin"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/item_iv_welfare"
+            style="@style/repple_out_backguound"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxHeight="720px"
+            android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/item_tv_user"
-        android:layout_width="match_parent"
-        android:textSize="@dimen/small_size"
-        android:textColor="?attr/colorPrimary"
-        android:layout_marginTop="@dimen/small_margin"
-        android:layout_marginBottom="@dimen/small_margin"
-        android:gravity="right"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:background="#22000000"
+            android:padding="@dimen/min_margin">
+        <TextView
+            android:id="@+id/item_tv_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textSize="@dimen/normal_size" />
 
-</com.zhy.autolayout.AutoLinearLayout>
+        <TextView
+            android:id="@+id/item_tv_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/min_margin"
+            android:gravity="right"
+            android:textColor="@color/white"
+            android:textSize="@dimen/small_size" />
+        </LinearLayout>
+
+    </com.zhy.autolayout.AutoRelativeLayout>
+</android.support.v7.widget.CardView>
